--- a/infra/discovery-server/src/main/resources/application.properties
+++ b/infra/discovery-server/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
