--- a/infra/gateway-server/src/main/resources/application.properties
+++ b/infra/gateway-server/src/main/resources/application.properties
@@ -1,13 +1,15 @@
-  server.port=8080
-    
-    spring.application.name=gateway-server
-  spring.config.import=optional:configserver:
-    spring.cloud.config.enabled=true
-    
-    # Gateway настройки
-    spring.cloud.gateway.discovery.locator.enabled=true
-    spring.cloud.gateway.discovery.locator.lower-case-service-id=true
-    
-    # Eureka
-    eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-    eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+server.port=8080
+
+spring.application.name=gateway-server
+spring.config.import=optional:configserver:
+spring.cloud.config.enabled=true
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+
+# Gateway ?????????
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+# Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
