fix: исправлены замечания ревью; исправил логику подсчета confirmedRequests в ParticipationRequestService, удалил аннотацию @Generated из ExceptionMessages, добавил динамическое получение appName через @Value в GlobalInterceptor, cинхронизированы порты между конфигурациями и docker-compose

--- a/infra/config-server/src/main/resources/config/infra/gateway-server/application.properties
+++ b/infra/config-server/src/main/resources/config/infra/gateway-server/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 
 spring.application.name=gateway-server
 
-# Gateway ????????
+# Gateway
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
