--- a/infra/config-server/src/main/resources/config/event-service/application.properties
+++ b/infra/config-server/src/main/resources/config/event-service/application.properties
@@ -2,6 +2,11 @@
 spring.application.name=event-service
 server.port=8087
 
+# Spring Cloud Config
+spring.config.import=optional:configserver:http://config-server:8888
+spring.cloud.config.enabled=true
+spring.cloud.config.fail-fast=false
+
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://event-db:5432/ewm-events
