--- a/infra/config-server/src/main/resources/config/request-service/application.properties
+++ b/infra/config-server/src/main/resources/config/request-service/application.properties
@@ -2,6 +2,11 @@
 spring.application.name=request-service
 server.port=8086
 
+# Spring Cloud Config
+spring.config.import=optional:configserver:http://config-server:8888
+spring.cloud.config.enabled=true
+spring.cloud.config.fail-fast=false
+
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://request-db:5432/ewm-requests
@@ -16,7 +21,10 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Eureka Configuration
 eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.instance-id=${spring.application.name}:${random.value}
+eureka.instance.prefer-ip-address=true
 
 # Actuator
 management.endpoints.web.exposure.include=health,info,metrics
