--- a/core/event-service/src/main/resources/application.properties
+++ b/core/event-service/src/main/resources/application.properties
@@ -2,6 +2,11 @@
 spring.application.name=event-service
 server.port=8087
 
+# Spring Cloud Config
+spring.config.import=optional:configserver:http://localhost:8888
+spring.cloud.config.enabled=true
+spring.cloud.config.fail-fast=false
+
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:6548/ewm-events
