--- a/core/request-service/src/main/resources/application.properties
+++ b/core/request-service/src/main/resources/application.properties
@@ -2,9 +2,14 @@
 spring.application.name=request-service
 server.port=8086
 
+# Spring Cloud Config
+spring.config.import=optional:configserver:http://localhost:8888
+spring.cloud.config.enabled=true
+spring.cloud.config.fail-fast=false
+
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://request-db:5432/ewm-requests
+spring.datasource.url=jdbc:postgresql://localhost:6548/ewm-requests
 spring.datasource.username=postgres
 spring.datasource.password=root
 
@@ -15,7 +20,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Eureka Configuration
-eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${random.value}
