--- a/infra/config-server/src/main/resources/config/user-service/application.properties
+++ b/infra/config-server/src/main/resources/config/user-service/application.properties
@@ -1,6 +1,10 @@
 server.port=8082
-
 spring.application.name=user-service
+
+# Spring Cloud Config
+spring.config.import=optional:configserver:http://config-server:8888
+spring.cloud.config.enabled=true
+spring.cloud.config.fail-fast=false
 
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -16,4 +20,11 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Eureka Configuration
 eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+eureka.instance.prefer-ip-address=true
+
+# Actuator Configuration
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
