--- a/infra/config-server/src/main/resources/config/infra/gateway-server/application.properties
+++ b/infra/config-server/src/main/resources/config/infra/gateway-server/application.properties
@@ -1,105 +1,30 @@
 server.port=8080
-
 spring.application.name=gateway-server
+
+# Spring Cloud Config
+spring.config.import=optional:configserver:http://config-server:8888
+spring.cloud.config.enabled=true
+spring.cloud.config.fail-fast=false
 
 # Gateway
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 # Main Service
-spring.cloud.gateway.routes[0].id=main-service-admin
+spring.cloud.gateway.routes[0].id=main-service-all
 spring.cloud.gateway.routes[0].uri=lb://MAIN-SERVICE
-spring.cloud.gateway.routes[0].predicates[0]=Path=/admin/**
-
-spring.cloud.gateway.routes[1].id=main-service-public  
-spring.cloud.gateway.routes[1].uri=lb://MAIN-SERVICE
-spring.cloud.gateway.routes[1].predicates[0]=Path=/compilations/**,/events/**
-
-spring.cloud.gateway.routes[2].id=main-service-private
-spring.cloud.gateway.routes[2].uri=lb://MAIN-SERVICE
-spring.cloud.gateway.routes[2].predicates[0]=Path=/users/**
-
-# User Service
-spring.cloud.gateway.routes[3].id=user-service-direct
-spring.cloud.gateway.routes[3].uri=lb://USER-SERVICE
-spring.cloud.gateway.routes[3].predicates[0]=Path=/admin/users
-spring.cloud.gateway.routes[3].filters[0]=name=Retry,args.retries=3,args.statuses=BAD_GATEWAY,SERVICE_UNAVAILABLE,args.methods=GET,POST,DELETE
-
-# Category Service
-spring.cloud.gateway.routes[4].id=category-service-admin
-spring.cloud.gateway.routes[4].uri=lb://CATEGORY-SERVICE
-spring.cloud.gateway.routes[4].predicates[0]=Path=/admin/categories/**
-spring.cloud.gateway.routes[4].filters[0]=name=Retry,args.retries=3,args.statuses=BAD_GATEWAY,SERVICE_UNAVAILABLE,args.methods=GET,POST,DELETE,PATCH
-
-spring.cloud.gateway.routes[5].id=category-service-public
-spring.cloud.gateway.routes[5].uri=lb://CATEGORY-SERVICE
-spring.cloud.gateway.routes[5].predicates[0]=Path=/categories/**
-spring.cloud.gateway.routes[5].filters[0]=name=Retry,args.retries=3,args.statuses=BAD_GATEWAY,SERVICE_UNAVAILABLE,args.methods=GET
-
-# Compilation Service
-spring.cloud.gateway.routes[6].id=compilation-service-admin
-spring.cloud.gateway.routes[6].uri=lb://COMPILATION-SERVICE
-spring.cloud.gateway.routes[6].predicates[0]=Path=/admin/compilations/**
-spring.cloud.gateway.routes[6].filters[0]=name=Retry,args.retries=3,args.statuses=BAD_GATEWAY,SERVICE_UNAVAILABLE,args.methods=GET,POST,DELETE,PATCH
-
-spring.cloud.gateway.routes[7].id=compilation-service-public
-spring.cloud.gateway.routes[7].uri=lb://COMPILATION-SERVICE
-spring.cloud.gateway.routes[7].predicates[0]=Path=/compilations/**
-spring.cloud.gateway.routes[7].filters[0]=name=Retry,args.retries=3,args.statuses=BAD_GATEWAY,SERVICE_UNAVAILABLE,args.methods=GET
-
-# Comment Service
-spring.cloud.gateway.routes[8].id=comment-service-admin
-spring.cloud.gateway.routes[8].uri=lb://COMMENT-SERVICE
-spring.cloud.gateway.routes[8].predicates[0]=Path=/admin/comments
-spring.cloud.gateway.routes[8].filters[0]=name=Retry,args.retries=3,args.statuses=BAD_GATEWAY,SERVICE_UNAVAILABLE,args.methods=GET,DELETE
-
-# Comment Service
-spring.cloud.gateway.routes[9].id=comment-service-public
-spring.cloud.gateway.routes[9].uri=lb://COMMENT-SERVICE
-spring.cloud.gateway.routes[9].predicates[0]=Path=/comments/**
-spring.cloud.gateway.routes[9].filters[0]=name=Retry,args.retries=3,args.statuses=BAD_GATEWAY,SERVICE_UNAVAILABLE,args.methods=GET
-
-# Comment Service
-spring.cloud.gateway.routes[10].id=comment-service-private
-spring.cloud.gateway.routes[10].uri=lb://COMMENT-SERVICE
-spring.cloud.gateway.routes[10].predicates[0]=Path=/users/comments/**
-spring.cloud.gateway.routes[10].filters[0]=name=Retry,args.retries=3,args.statuses=BAD_GATEWAY,SERVICE_UNAVAILABLE,args.methods=GET,POST,PATCH,DELETE
-
-# Request Service
-spring.cloud.gateway.routes[11].id=request-service-private
-spring.cloud.gateway.routes[11].uri=lb://REQUEST-SERVICE
-spring.cloud.gateway.routes[11].predicates[0]=Path=/users/*/requests/**,/users/*/events/*/requests
-spring.cloud.gateway.routes[11].filters[0]=name=Retry,args.retries=3,args.statuses=BAD_GATEWAY,SERVICE_UNAVAILABLE,args.methods=GET,POST,PATCH
-
-# Request Service (main-service)
-spring.cloud.gateway.routes[12].id=request-service-internal
-spring.cloud.gateway.routes[12].uri=lb://REQUEST-SERVICE
-spring.cloud.gateway.routes[12].predicates[0]=Path=/internal/**
-spring.cloud.gateway.routes[12].filters[0]=name=Retry,args.retries=3,args.statuses=BAD_GATEWAY,SERVICE_UNAVAILABLE,args.methods=GET
-
-# Event Service
-spring.cloud.gateway.routes[13].id=event-service-admin
-spring.cloud.gateway.routes[13].uri=lb://EVENT-SERVICE
-spring.cloud.gateway.routes[13].predicates[0]=Path=/admin/events
-spring.cloud.gateway.routes[13].filters[0]=name=Retry,args.retries=3,args.statuses=BAD_GATEWAY,SERVICE_UNAVAILABLE,args.methods=GET,PATCH
-
-# Event Service
-spring.cloud.gateway.routes[14].id=event-service-public
-spring.cloud.gateway.routes[14].uri=lb://EVENT-SERVICE
-spring.cloud.gateway.routes[14].predicates[0]=Path=/events/**
-spring.cloud.gateway.routes[14].filters[0]=name=Retry,args.retries=3,args.statuses=BAD_GATEWAY,SERVICE_UNAVAILABLE,args.methods=GET
-
-# Event Service
-spring.cloud.gateway.routes[15].id=event-service-private
-spring.cloud.gateway.routes[15].uri=lb://EVENT-SERVICE
-spring.cloud.gateway.routes[15].predicates[0]=Path=/users/*/events/**
-spring.cloud.gateway.routes[15].filters[0]=name=Retry,args.retries=3,args.statuses=BAD_GATEWAY,SERVICE_UNAVAILABLE,args.methods=GET,POST,PATCH
-
-# Event Service
-spring.cloud.gateway.routes[16].id=event-service-internal
-spring.cloud.gateway.routes[16].uri=lb://EVENT-SERVICE
-spring.cloud.gateway.routes[16].predicates[0]=Path=/internal/events/**
-spring.cloud.gateway.routes[16].filters[0]=name=Retry,args.retries=3,args.statuses=BAD_GATEWAY,SERVICE_UNAVAILABLE,args.methods=GET
+spring.cloud.gateway.routes[0].predicates[0]=Path=/**
 
 # Eureka
 eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.instance-id=${spring.application.name}:${random.value}
+eureka.instance.prefer-ip-address=true
+
+# Actuator
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
+
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.reactor.netty.http.client=DEBUG
