--- a/infra/config-server/src/main/resources/config/main-service/application.properties
+++ b/infra/config-server/src/main/resources/config/main-service/application.properties
@@ -1,20 +1,24 @@
 server.port=8081
 spring.application.name=main-service
 
-# ???? ??????
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewm-main
-spring.datasource.username=postgres
-spring.datasource.password=root
+# Spring Cloud Config
+spring.config.import=optional:configserver:http://config-server:8888
+spring.cloud.config.enabled=true
+spring.cloud.config.fail-fast=false
 
-# JPA
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration
 
 # Stats client
 stats-server.url=http://stats-server:9090
 
 # Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.instance-id=${spring.application.name}:${random.value}
+eureka.instance.prefer-ip-address=true
+
+# Actuator
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
