--- a/core/main-service/src/main/resources/application.properties
+++ b/core/main-service/src/main/resources/application.properties
@@ -2,12 +2,12 @@
 spring.application.name=main-service
 
 # Spring Cloud Config
-spring.config.import=optional:configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://config-server:8888
 spring.cloud.config.enabled=true
-spring.cloud.config.fail-fast=false
+spring.cloud.config.fail-fast=true
 
 # Eureka Client Configuration
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${random.value}
@@ -16,11 +16,11 @@ eureka.instance.prefer-ip-address=true
 # Server Configuration
 server.port=8081
 
-#
+# Exclude database auto-configuration
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration
 
 # Stats Server Configuration
-stats-server.url=${STATS_SERVER_URL:http://localhost:9090}
+stats-server.url=http://stats-server:9090
 
 # Actuator Endpoints
 management.endpoints.web.exposure.include=health,info,metrics
