--- a/core/compilation-service/src/main/resources/application.properties
+++ b/core/compilation-service/src/main/resources/application.properties
@@ -2,16 +2,16 @@ spring.application.name=compilation-service
 server.port=8084
 
 # Config Server
-spring.config.import=optional:configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://config-server:8888
 spring.cloud.config.enabled=true
-spring.cloud.config.fail-fast=false
+spring.cloud.config.fail-fast=true
 
-#
+# SQL init
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
 
 # Eureka Configuration
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${random.value}
