--- a/infra/config-server/src/main/resources/config/compilation-service/application.properties
+++ b/infra/config-server/src/main/resources/config/compilation-service/application.properties
@@ -1,11 +1,14 @@
-# Spring Application
 spring.application.name=compilation-service
 server.port=8084
 
-# Spring Cloud Config
+# Config Server
 spring.config.import=optional:configserver:http://config-server:8888
 spring.cloud.config.enabled=true
 spring.cloud.config.fail-fast=false
+
+#
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
 
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -18,10 +21,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-#
-spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:schema.sql
 
 # Eureka Configuration
 eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
