--- a/infra/config-server/src/main/resources/config/stats/stats-server/application.properties
+++ b/infra/config-server/src/main/resources/config/stats/stats-server/application.properties
@@ -1,8 +1,8 @@
-server.port=0
+server.port=9090
 
 spring.application.name=stats-server
 
-# ???? ??????
+# Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://stats-db:5432/ewm-stats
 spring.datasource.username=postgres
@@ -15,4 +15,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
