--- a/core/request-service/src/main/resources/application.properties
+++ b/core/request-service/src/main/resources/application.properties
@@ -3,24 +3,24 @@ spring.application.name=request-service
 server.port=8086
 
 # Spring Cloud Config
-spring.config.import=optional:configserver:http://config-server:8888
+spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://config-server:8888}
 spring.cloud.config.enabled=true
-spring.cloud.config.fail-fast=true
+spring.cloud.config.fail-fast=false
 
 # Database Configuration
-# spring.datasource.driver-class-name=org.postgresql.Driver
-# spring.datasource.url=jdbc:postgresql://localhost:6548/ewm-requests
-# spring.datasource.username=postgres
-# spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://request-db:5432/ewm-requests}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:root}
 
 # JPA Configuration
-# spring.jpa.hibernate.ddl-auto=create-drop
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.format_sql=true
-# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:create-drop}
+spring.jpa.show-sql=${JPA_SHOW_SQL:true}
+spring.jpa.properties.hibernate.format_sql=${JPA_FORMAT_SQL:true}
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Eureka Configuration
-eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://discovery-server:8761/eureka/}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${random.value}
