--- a/core/category-service/src/main/resources/application.properties
+++ b/core/category-service/src/main/resources/application.properties
@@ -2,24 +2,24 @@
 spring.application.name=category-service
 
 # Spring Cloud Config
-spring.config.import=optional:configserver:http://config-server:8888
+spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://config-server:8888}
 spring.cloud.config.enabled=true
-spring.cloud.config.fail-fast=true
+spring.cloud.config.fail-fast=false
 
 # Database Configuration
-# spring.datasource.driver-class-name=org.postgresql.Driver
-# spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:6545/ewm-categories}
-# spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
-# spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://category-db:5432/ewm-categories}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:root}
 
 # JPA Configuration
-# spring.jpa.hibernate.ddl-auto=create-drop
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.format_sql=true
-# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:create-drop}
+spring.jpa.show-sql=${JPA_SHOW_SQL:true}
+spring.jpa.properties.hibernate.format_sql=${JPA_FORMAT_SQL:true}
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Eureka Client Configuration
-eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://discovery-server:8761/eureka/}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${random.value}
