--- a/core/event-service/src/main/resources/application.properties
+++ b/core/event-service/src/main/resources/application.properties
@@ -3,29 +3,33 @@ spring.application.name=event-service
 server.port=8087
 
 # Spring Cloud Config
-spring.config.import=optional:configserver:http://config-server:8888
+spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888}
 spring.cloud.config.enabled=true
-spring.cloud.config.fail-fast=true
+spring.cloud.config.fail-fast=false
 
 # Database Configuration
-# spring.datasource.driver-class-name=org.postgresql.Driver
-# spring.datasource.url=jdbc:postgresql://localhost:6548/ewm-events
-# spring.datasource.username=postgres
-# spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://event-db:5432/ewm-events}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:root}
 
 # JPA Configuration
-# spring.jpa.hibernate.ddl-auto=create-drop
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.format_sql=true
-# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:update}
+spring.jpa.show-sql=${JPA_SHOW_SQL:false}
+spring.jpa.properties.hibernate.format_sql=${JPA_FORMAT_SQL:true}
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Eureka Configuration
-eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+eureka.instance.prefer-ip-address=true
+eureka.client.healthcheck.enabled=true
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.instance.instance-id=${spring.application.name}:${random.value}
-eureka.instance.prefer-ip-address=true
 
 # Actuator
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
+
+# External Services URLs
+services.stats.url=http://stats-server:9090
