--- a/core/main-service/src/main/resources/application.properties
+++ b/core/main-service/src/main/resources/application.properties
@@ -2,12 +2,12 @@
 spring.application.name=main-service
 
 # Spring Cloud Config
-spring.config.import=optional:configserver:http://config-server:8888
+spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://config-server:8888}
 spring.cloud.config.enabled=true
-spring.cloud.config.fail-fast=true
+spring.cloud.config.fail-fast=false
 
 # Eureka Client Configuration
-eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://discovery-server:8761/eureka/}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${random.value}
