--- a/infra/config-server/src/main/resources/config/infra/gateway-server/application.properties
+++ b/infra/config-server/src/main/resources/config/infra/gateway-server/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 spring.application.name=gateway-server
 
 # Spring Cloud Config
-spring.config.import=optional:configserver:http://config-server:8888
+spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888}
 spring.cloud.config.enabled=true
 spring.cloud.config.fail-fast=false
 
@@ -10,13 +10,8 @@ spring.cloud.config.fail-fast=false
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
-# Main Service
-spring.cloud.gateway.routes[0].id=main-service-all
-spring.cloud.gateway.routes[0].uri=lb://MAIN-SERVICE
-spring.cloud.gateway.routes[0].predicates[0]=Path=/**
-
 # Eureka
-eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${random.value}
