--- a/core/event-service/src/main/resources/application.properties
+++ b/core/event-service/src/main/resources/application.properties
@@ -3,24 +3,24 @@ spring.application.name=event-service
 server.port=8087
 
 # Spring Cloud Config
-spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888}
+spring.config.import=optional:configserver:http://localhost:8888
 spring.cloud.config.enabled=true
 spring.cloud.config.fail-fast=false
 
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://event-db:5432/ewm-events}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:root}
+spring.datasource.url=jdbc:postgresql://localhost:6549/ewm-events
+spring.datasource.username=postgres
+spring.datasource.password=root
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:update}
-spring.jpa.show-sql=${JPA_SHOW_SQL:false}
-spring.jpa.properties.hibernate.format_sql=${JPA_FORMAT_SQL:true}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Eureka Configuration
-eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 eureka.instance.prefer-ip-address=true
 eureka.client.healthcheck.enabled=true
@@ -32,4 +32,4 @@ management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
 
 # External Services URLs
-services.stats.url=http://stats-server:9090
+services.stats.url=http://localhost:9090
