--- a/core/main-service/src/main/resources/application.properties
+++ b/core/main-service/src/main/resources/application.properties
@@ -1,27 +1,25 @@
-# Spring Application Name
+# Spring Application
 spring.application.name=main-service
+server.port=8081
 
 # Spring Cloud Config
-spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://config-server:8888}
+spring.config.import=optional:configserver:http://localhost:8888
 spring.cloud.config.enabled=true
 spring.cloud.config.fail-fast=false
 
-# Eureka Client Configuration
-eureka.client.service-url.defaultZone=${EUREKA_URL:http://discovery-server:8761/eureka/}
+# Eureka Configuration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${random.value}
 eureka.instance.prefer-ip-address=true
 
-# Server Configuration
-server.port=8081
-
-# Exclude database auto-configuration
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration
-
-# Stats Server Configuration
-stats-server.url=http://stats-server:9090
-
-# Actuator Endpoints
+# Actuator
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
+
+# Stats Server
+stats-server.url=http://localhost:9090
+
+# Exclude database
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration
