--- a/infra/config-server/src/main/resources/config/stats/stats-server/application.properties
+++ b/infra/config-server/src/main/resources/config/stats/stats-server/application.properties
@@ -1,5 +1,4 @@
 server.port=9090
-
 spring.application.name=stats-server
 
 # Database Configuration
@@ -16,3 +15,11 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Eureka
 eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.instance-id=${spring.application.name}:${random.value}
+eureka.instance.prefer-ip-address=true
+
+# Actuator
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
