--- a/infra/gateway-server/src/main/resources/application.properties
+++ b/infra/gateway-server/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 server.port=8080
-
 spring.application.name=gateway-server
-spring.config.import=optional:configserver:
+
+# Spring Cloud Config
+spring.config.import=optional:configserver:http://localhost:8888
 spring.cloud.config.enabled=true
+spring.cloud.config.fail-fast=false
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
 
@@ -10,6 +12,7 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSou
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
+#
 spring.cloud.gateway.routes[0].id=main-service-admin
 spring.cloud.gateway.routes[0].uri=lb://MAIN-SERVICE
 spring.cloud.gateway.routes[0].predicates[0]=Path=/admin/**
@@ -24,4 +27,11 @@ spring.cloud.gateway.routes[2].predicates[0]=Path=/users/**
 
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+eureka.instance.prefer-ip-address=true
+
+# Actuator
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
