--- a/core/category-service/src/main/resources/application.properties
+++ b/core/category-service/src/main/resources/application.properties
@@ -1,32 +1,24 @@
-# Spring Application Name
 spring.application.name=category-service
-
-# Spring Cloud Config
-spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://config-server:8888}
-spring.cloud.config.enabled=true
-spring.cloud.config.fail-fast=false
+server.port=8083
 
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://category-db:5432/ewm-categories}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:root}
+spring.datasource.url=jdbc:postgresql://localhost:6545/ewm-categories
+spring.datasource.username=postgres
+spring.datasource.password=root
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:create-drop}
-spring.jpa.show-sql=${JPA_SHOW_SQL:true}
-spring.jpa.properties.hibernate.format_sql=${JPA_FORMAT_SQL:true}
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# Eureka Client Configuration
-eureka.client.service-url.defaultZone=${EUREKA_URL:http://discovery-server:8761/eureka/}
+# Eureka Configuration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${random.value}
 eureka.instance.prefer-ip-address=true
-
-# Server Configuration
-server.port=8083
 
 # Actuator Endpoints
 management.endpoints.web.exposure.include=health,info,metrics
