--- a/core/comment-service/src/main/resources/application.properties
+++ b/core/comment-service/src/main/resources/application.properties
@@ -1,26 +1,20 @@
-# Spring Application
 spring.application.name=comment-service
 server.port=8085
 
-# Spring Cloud Config
-spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://config-server:8888}
-spring.cloud.config.enabled=true
-spring.cloud.config.fail-fast=false
-
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://comment-db:5432/ewm-comments}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:root}
+spring.datasource.url=jdbc:postgresql://localhost:6547/ewm-comments
+spring.datasource.username=postgres
+spring.datasource.password=root
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:create-drop}
-spring.jpa.show-sql=${JPA_SHOW_SQL:true}
-spring.jpa.properties.hibernate.format_sql=${JPA_FORMAT_SQL:true}
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Eureka Configuration
-eureka.client.service-url.defaultZone=${EUREKA_URL:http://discovery-server:8761/eureka/}
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${random.value}
