--- a/core/compilation-service/src/main/resources/application.properties
+++ b/core/compilation-service/src/main/resources/application.properties
@@ -1,21 +1,16 @@
 spring.application.name=compilation-service
 server.port=8084
 
-# Spring Cloud Config
-spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://config-server:8888}
-spring.cloud.config.enabled=true
-spring.cloud.config.fail-fast=false
-
 # Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://compilation-db:5432/ewm-compilations}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:root}
+spring.datasource.url=jdbc:postgresql://localhost:6546/ewm-compilations
+spring.datasource.username=postgres
+spring.datasource.password=root
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:create-drop}
-spring.jpa.show-sql=${JPA_SHOW_SQL:true}
-spring.jpa.properties.hibernate.format_sql=${JPA_FORMAT_SQL:true}
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # SQL init
@@ -23,7 +18,7 @@ spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
 
 # Eureka Configuration
-eureka.client.service-url.defaultZone=${EUREKA_URL:http://discovery-server:8761/eureka/}
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${random.value}
