--- a/infra/gateway-server/src/main/resources/application.properties
+++ b/infra/gateway-server/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 server.port=8080
 spring.application.name=gateway-server
-
 spring.main.web-application-type=reactive
 
 # Spring Cloud Config
@@ -12,6 +11,27 @@ spring.cloud.config.fail-fast=false
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
+#
+spring.cloud.gateway.routes[0].id=user-service
+spring.cloud.gateway.routes[0].uri=lb://USER-SERVICE
+spring.cloud.gateway.routes[0].predicates[0]=Path=/users/**
+
+spring.cloud.gateway.routes[1].id=event-service
+spring.cloud.gateway.routes[1].uri=lb://EVENT-SERVICE
+spring.cloud.gateway.routes[1].predicates[0]=Path=/events/**
+
+spring.cloud.gateway.routes[2].id=main-service-admin
+spring.cloud.gateway.routes[2].uri=lb://MAIN-SERVICE
+spring.cloud.gateway.routes[2].predicates[0]=Path=/admin/**
+
+spring.cloud.gateway.routes[3].id=main-service-categories
+spring.cloud.gateway.routes[3].uri=lb://MAIN-SERVICE
+spring.cloud.gateway.routes[3].predicates[0]=Path=/categories/**
+
+spring.cloud.gateway.routes[4].id=main-service-compilations
+spring.cloud.gateway.routes[4].uri=lb://MAIN-SERVICE
+spring.cloud.gateway.routes[4].predicates[0]=Path=/compilations/**
+
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
@@ -20,5 +40,5 @@ eureka.instance.instance-id=${spring.application.name}:${random.value}
 eureka.instance.prefer-ip-address=true
 
 # Actuator
-management.endpoints.web.exposure.include=health,info,metrics
+management.endpoints.web.exposure.include=health,info,metrics,gateway
 management.endpoint.health.show-details=always
