--- a/core/main-service/src/main/resources/application.properties
+++ b/core/main-service/src/main/resources/application.properties
@@ -6,6 +6,16 @@ spring.config.import=optional:configserver:http://localhost:8888
 spring.cloud.config.enabled=true
 spring.cloud.config.fail-fast=false
 
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:6543/ewm-main
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
 # Eureka Configuration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
@@ -19,6 +29,3 @@ management.endpoint.health.show-details=always
 
 # Stats Server
 stats-server.url=http://localhost:9090
-
-# Exclude database
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration
